@@ -3,7 +3,7 @@
   "name":"D-MOD Services",
   "utility":"true",
   "author":"Tranquility",
-  "version":{"major":2,"minor":2,"patch":1},
+  "version":{"major":2,"minor":2,"patch":0},
   "description":"Adds D-MOD services, which lets your ships gain Damage Mods in a controlled environment.",
   "gameVersion":"0.97a-RC11",
   "jars":["jars/DMODServices.jar"],
